--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,11 +1,44 @@
-body{
+*{
     margin: 0;
+    padding: 0;
+}
+
+body{
     background-color:rgb(104, 0, 0);
+}
+
+/* Nav Bar */
+
+.navbar{
+    background-color: white;
+}
+
+.navbar ul{
+    display: flex;
+    justify-content: center;
+}
+
+.navbar ul li{
+    list-style: none;
+}
+
+.navbar ul li a{
+    display: block;
+    padding: 1em;
+    text-decoration: none;
+    color: black;
+    font-size: 16;
+    transition: .5s;
+}
+
+.navbar ul li a:hover{
+    background-color: rgb(36, 36, 36);
+    color: white;
 }
 
 #main-container{
     padding-top: 50px;
-    background-image: linear-gradient(black,rgb(104, 0, 0));
+    background-color:rgb(0, 0, 0);
     color: white;
 }
 
