--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -36,7 +36,16 @@ body{
     color: white;
 }
 
-#main-container{
+/* Main Section */
+main{
+    width: 100%;
+    max-width: 900px;
+    margin: 0 auto;
+}
+
+
+/* Old Main Body */
+/* #main-container{
     padding-top: 50px;
     background-color:rgb(0, 0, 0);
     color: white;
@@ -70,4 +79,4 @@ body{
     margin-right: auto;
     width: 714;
     height: 476;
-}
+} */
