added footer and font awesome

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -43,6 +43,12 @@ main{
     margin: 0 auto;
 }
 
+/* Footer Nav */
+
+footer{
+    display: grid;
+    grid-template-columns: auto 1fr auto;
+}
 
 /* Old Main Body */
 /* #main-container{
