--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,44 +1,8 @@
 *{
     margin: 0;
     padding: 0;
+    border-style: solid;
 }
-
-body{
-    background-color:white;
-    font-family: 'Cabin', sans-serif;
-    font-size: 16px;
-}
-
-h1{
-    font-size: 28px;
-}
-
-h2{
-    font-size: 24px;
-    font-style: italic;
-}
-
-h3{
-    font-size: 22px;
-    color: blue;
-}
-
-h4{
-    font-size: 20px;
-    font-weight: 500;
-}
-
-h5{
-    font-size: 18px;
-    font-weight: 400;
-}
-
-h6{
-    font-size: 16px;
-    font-weight: 300;
-}
-
-
 
 /* Nav Bar */
 
@@ -48,7 +12,7 @@ h6{
 
 .navbar ul{
     display: flex;
-    justify-content: center;
+    justify-content: right;
 }
 
 .navbar ul li{
@@ -69,18 +33,35 @@ h6{
     color: black;
 }
 
+/* Hero Image*/
+
+section{
+    text-align: center;
+}
+
+#hero{
+    height: 600px;
+    object-fit: cover;
+    width: 100%;
+    max-width: 1080px;
+}
+
 /* Main Section */
+
 main{
     width: 100%;
-    max-width: 900px;
+    max-width: 1080px;
     margin: 0 auto;
 }
 
 main img{
-    display: flex;
     width: 100%;
-    max-width: 600px;
-    margin: 30 auto 30;
+}
+
+body{
+    background-color:white;
+    font-family: 'Cabin', sans-serif;
+    font-size: 16px;
 }
 
 /* Footer Nav */
@@ -88,27 +69,14 @@ main img{
 footer{
     display: grid;
     grid-template-columns: auto 1fr auto;
-}
-
-footer ul li{
-    list-style: none;
-}
-
-footer ul a{
-    color: white;
-    text-decoration: none;
-}
-
-footer{
-    border: solid 1px;
-    background-color: white;
-    border-right:1px solid transparent;
-    border-left:1px solid transparent;
+    border-top: solid 1px;
+    background-color: white;   
 }
 
 footer ul{
     display: flex;
     justify-content: left;
+
 }
 
 footer ul li{
@@ -127,7 +95,7 @@ footer ul li a{
 footer ul li a:hover{
     background-color: rgb(36, 36, 36);
     color: white;
-} */
+}
 
 /* Old Main Body */
 /* #main-container{
@@ -164,4 +132,33 @@ footer ul li a:hover{
     margin-right: auto;
     width: 714;
     height: 476;
+} */
+
+/* h1{
+    font-size: 28px;
+}
+
+h2{
+    font-size: 24px;
+    font-style: italic;
+}
+
+h3{
+    font-size: 22px;
+    color: blue;
+}
+
+h4{
+    font-size: 20px;
+    font-weight: 500;
+}
+
+h5{
+    font-size: 18px;
+    font-weight: 400;
+}
+
+h6{
+    font-size: 16px;
+    font-weight: 300;
 } */
