--- a/css/index.css
+++ b/css/index.css
@@ -47,11 +47,31 @@ main div.about{
 }
 
 main div.textbox{
-    padding: 5%;
+    padding: 10%;
 }
 
 main div.textbox p{
     font-size: 25px;
+}
+
+/* Resources */
+
+#resources{
+    margin: 100px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    text-align: center;
+}
+
+#resources a{
+    color: black;
+    text-decoration: none;
+}
+
+#resources a:hover{
+    color: red;
+    font-size:1.3em;
+    transition: .3s ease-out;
 }
 
 /* Game Section */
